--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": ["twitch", "bits", "wheel", "diablo2"],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
